--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
     'opsz' 48
 }
 
-/*******PRODUCT GRID******/
+/*******<PRODUCT GRID>******/
 .product-grid1,
 .product-grid1 .product-image4 {
     position:relative;
@@ -96,9 +96,9 @@
     font:Regular 400;
 }
 
-/*******PRODUCT GRID******/
+/*******</PRODUCT GRID>******/
 
-/***TICKETS***/
+/***<TICKETS>***/
 .ticket_new{
     height: 30px;
     font-size: 20px;
@@ -128,7 +128,7 @@
     font-weight: bolder;
     font-family: 'Font Awesome 5 Free';
 }
-/***TICKETS***/
+/***</TICKETS>***/
 
 @media screen and (max-width: 700px){
 
